# tasky-term

./: .gitignore  TasklistMarkdownRenderer.py  demo.md  hello.py  main.py  markdown_tasks.py  md_task_lists.py  pyproject.toml  readme.md  table.py  taskWidget.py  tasky.tcss  textual-test.py  todo.md  toodoot.py  widgets.py
.github/workflows/: workflow.yml
playground/: TasklistMarkdownRenderer.py  dict.py  hello.py  table.py  taskWidget.py
toodoot/: markdowntasks.py  toodoot.py  widgets.py
toodoot/toodoot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
