[build-system]
requires = ["flit_core >=3.2,<4",
    "textual >= 0.38.1",
    "markdown_tasks"]
build-backend = "flit_core.buildapi"

[project]
name = "toodoot"
authors = [{name = "Hunter Dyar", email = "me@hdyar.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.0.2"
description = "Manage todos with markdown formatting from a convenient TUI"
readme = "readme.md"

[project.urls]
Home = "https://github.com/hunterdyar/toodoot"
Source = "https://github.com/hunterdyar/toodoot"

[project.scripts]
toodoot = "toodoot:main"

[tool.flit.module]
markdown_tasks = "markdown_tasks"
widgets = "widgets"